finito? qui funziona tutto

--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.1",
   "description": "configurazione ",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon -r dotenv/config src/index.js"
   },
+  "keywords": [],
   "author": "Io-T",
   "license": "ISC",
   "dependencies": {
